--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -8,16 +8,8 @@ html {
     box-sizing: inherit;
 }
 
-a {
-    display: inline-block;
-    text-decoration: none;
-}
-
-ul,
-li {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+body {
+    font-family: $font;
 }
 
 .container {
@@ -25,3 +17,96 @@ li {
     margin: 0 auto;
     padding: 0 15px;
 }
+
+.visually-hidden {
+    position: absolute;
+
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+
+    white-space: nowrap;
+
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
+.header-icons {
+    font-size: 20px;
+    position: relative;
+    
+    &:after {
+        position: absolute;
+        font-family: $font;
+        font-weight: 500;
+        font-size: 14px;
+        text-align: center;
+        color: #fff;
+        padding-top: 4px;
+    }
+
+    &:active {
+        color: $blue;
+    }
+}
+
+.links {
+    padding: 16px 29px 20px 34px;
+    text-decoration: none;
+    text-align: center;
+    border-radius: 40px;
+    font-weight: 400;
+    font-size: 16px;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, .2);
+    outline: transparent;
+    display: inline-block;
+
+    &:focus {
+        transform: scale(1.2);
+    }
+}
+
+.bg-block {
+    // max-width: 1140px;
+    width: 100%;
+    min-height: 110px;
+    padding: 42px 29px 42px 30px;
+    padding: 34px 29px 30px 28px;
+    border-radius: 4px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 2px 4px 0px rgba(108, 111, 115, 0.1);
+
+    display: flex;
+    justify-content: space-between;
+
+    font-weight: 400;
+    font-size: 30px;
+    color: #000;
+}
+
+.slider-button {
+    max-width: 110px;
+    width: 100%;
+    height: 44px;
+    background-color: rgb(115, 71, 193);
+    border-radius: 30px;
+}
+
+.rate-star {
+    display: inline-block;
+}
+
+.rectangle {
+    max-width: 190px;
+    width: 100%;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, .2);
+    padding: 20px 31px;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    outline: transparent;
+}
+
