--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -64,7 +64,9 @@ body {
     outline: transparent;
     display: inline-block;
 
+    &:hover,
     &:focus {
+        box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, .8);
         transform: scale(1.2);
     }
 }
