--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -379,15 +379,6 @@
         padding-bottom: 18px;
         transition: all 1s;
 
-        &:hover {
-            color: #fff;
-            background-color: transparent;
-        }
-
-        &:focus {
-            transform: scale(1.2);
-        }
-
         &:active {
             color: #fff;
             background-color: #212225;
@@ -402,11 +393,6 @@
         background-color: transparent;
         padding-bottom: 18px;
         transition: all 1s;
-
-        &:hover {
-            color: $blue;
-            background-color: #fff;
-        }
 
         &:active {
             color: #fff;
@@ -433,20 +419,22 @@
     // .search__inner-block-input
 
     &__inner-block-input {
-        max-width: 805px;
-        width: 100%;
+        // max-width: 805px;
+        // width: 100%;
+        width: 805px;
         padding: 16px 210px 17px 26px;
         border: 1px solid rgb(220, 220, 220);
         border-radius: 4px;
         font-weight: 400;
         font-size: 16px;
         color: #676767;
+        display: inline-block;
         position: relative;
     }
 
     // .search__inner-block-box
 
-		&__inner-block-box {
+	&__inner-block-box {
         position: absolute;
         display: inline-block;
         right: 295px;
@@ -457,7 +445,7 @@
         font-weight: 400;
         font-size: 16px;
         color: $grey;
-		}
+	}
 
     // .search__inner-block-select
 
