--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -92,7 +92,7 @@ body {
 .slider-button {
     max-width: 110px;
     width: 100%;
-    height: 44px;
+    min-height: 44px;
     background-color: rgb(115, 71, 193);
     border-radius: 30px;
 }
