--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -88,7 +88,7 @@
     // .header__top-notifications
 
     &__top-notifications {
- 
+
         &:after {
             content: "25";       
             right: -14px;
@@ -96,7 +96,7 @@
             background-color: rgb(255, 106, 108);
             border-radius: 55%;
             width: 26px;
-            height: 22px;
+            min-height: 22px;
         }
     }
 
@@ -119,7 +119,7 @@
             background-color: #62d03b;
             border-radius: 50%;
             width: 22px;
-            height: 22px;
+            min-height: 22px;
         }
     }
 
@@ -142,7 +142,7 @@
             background-color: $blue;
             border-radius: 50%;
             width: 22px;
-            height: 22px;
+            min-height: 22px;
         }
     }
 
@@ -196,7 +196,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        height: 80px;
+        min-height: 80px;
     }
 
     // .header__bottom-menu
@@ -323,7 +323,7 @@
             bottom: -53px;
             right: 15px;
             width: 1110px;
-            height: 135px;
+            min-height: 135px;
             border-radius: 6px;
             background-color: rgb(255, 255, 255);
             opacity: 0.502;
@@ -336,7 +336,7 @@
             bottom: -40px;
             right: 30px;
             width: 1080px;
-            height: 135px;
+            min-height: 135px;
             border-radius: 6px;
             background-color: rgb(255, 255, 255);
             opacity: 0.502;
@@ -1118,7 +1118,7 @@
     &__wrapper-main {
         position: relative;
         width: 100%;
-        height: 230px;
+        min-height: 230px;
         margin-bottom: 24px;
     }
 
