--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,5 +1,15 @@
 @font-face {
     font-family: 'Quicksand';
+    src: url("../fonts/Quicksand-Light.woff2") format("woff2"), /* Modern Browsers */
+        url("../fonts/Quicksand-Light.woff") format("woff"), /* Modern Browsers */
+        url("../fonts/Quicksand-Light.ttf") format("truetype");
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Quicksand';
     src: url("../fonts/Quicksand-Regular.woff2") format("woff2"), /* Modern Browsers */
         url("../fonts/Quicksand-Regular.woff") format("woff"), /* Modern Browsers */
         url("../fonts/Quicksand-Regular.ttf") format("truetype");
