--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -19,9 +19,8 @@ body {
 }
 
 .container-fluid {
-    max-width: 100%;
+    max-width: 1920px;
     margin: 0 auto;
-    padding: 0 30px;
 }
 
 .visually-hidden {
@@ -42,21 +41,21 @@ body {
 
 .header-icons {
     font-size: 20px;
-    position: relative;
-    
-    &:after {
-        position: absolute;
-        font-family: $font;
-        font-weight: 500;
-        font-size: 14px;
-        text-align: center;
-        color: #fff;
-        padding-top: 4px;
-    }
+    color: #7e8fa1;
 
     &:active {
         color: $blue;
     }
+}
+
+.header-numbers {
+    position: absolute;
+    font-family: $font;
+    font-weight: 500;
+    font-size: 14px;
+    text-align: center;
+    color: #fff;
+    padding-top: 4px;
 }
 
 .links {
@@ -90,24 +89,18 @@ body {
     display: flex;
     justify-content: space-between;
 
-    font-weight: 400;
-    font-size: 30px;
-    color: #000;
-}
-
-.slider-button {
-    max-width: 110px;
-    width: 100%;
-    min-height: 44px;
-    background-color: rgb(115, 71, 193);
-    border-radius: 30px;
+    &__title {
+        font-weight: 400;
+        font-size: 30px;
+        color: #000;
+    }
 }
 
 .rate-star {
     display: inline-block;
 }
 
-.rectangle {
+.product-btn-link {
     max-width: 190px;
     width: 100%;
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, .2);
@@ -116,5 +109,13 @@ body {
     border-radius: 50px;
     cursor: pointer;
     outline: transparent;
+    text-decoration: none;
+}
+
+.footer__titles {
+    font-weight: 400;
+    font-size: 18px;
+    color: #fff;
+    margin-bottom: 35px;
 }
 
