--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -77,72 +77,59 @@
     &__top-left {
         text-decoration: none;
         margin-left: 48px;
+        position: relative;
     }
 
-    // .header__top-notifications
+    // .header__top-left-number
 
-    &__top-notifications {
-
-        &:after {
-            content: "25";       
-            right: -14px;
-            top: -15px;
-            background-color: rgb(255, 106, 108);
-            border-radius: 55%;
-            width: 26px;
-            min-height: 22px;
-        }
-    }
+	&__top-left-number {
+        right: -14px;
+        top: -15px;
+        background-color: rgb(255, 106, 108);
+        border-radius: 55%;
+        width: 26px;
+        min-height: 22px;
+	}
 
     // .header__top-center
 
 	&__top-center {
         text-decoration: none;
         margin-left: 30px;
+        position: relative;
 	}
 
-    // .header__top-messages
-
-    &__top-messages {
-
-        &:after {
-            content: "6";
-            position: absolute;
-            right: -15px;
-            top: -15px;
-            background-color: #62d03b;
-            border-radius: 50%;
-            width: 22px;
-            min-height: 22px;
-        }
-    }
+    &__top-center-number {
+        position: absolute;
+        right: -15px;
+        top: -15px;
+        background-color: #62d03b;
+        border-radius: 50%;
+        width: 22px;
+        min-height: 22px;
+	}
 
     // .header__top-right
 
 	&__top-right {
         text-decoration: none;
         margin-left: 33px;
+        position: relative;
 	}
 
-    // .header__top-basket
-
-    &__top-basket {
-
-        &:after {
-            content: "2";
-            position: absolute;
-            right: -16px;
-            top: -15px;
-            background-color: $blue;
-            border-radius: 50%;
-            width: 22px;
-            min-height: 22px;
-        }
-    }
+    &__top-right-number {
+        position: absolute;
+        right: -16px;
+        top: -15px;
+        background-color: $blue;
+        border-radius: 50%;
+        width: 22px;
+        min-height: 22px;
+	}
 
     // .header__top-user-link
 
-	&__top-user-link {
+	&__top-user {
         margin-left: 47px;
         display: flex;
         align-items: center;
@@ -158,6 +145,9 @@
 
     &__top-photo {
         margin-right: 22px;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
     }
 
     // .header__top-name
@@ -195,7 +185,7 @@
 
     // .header__bottom-menu
 
-    &__bottom-menu {
+    &__menu {
         max-width: 498px;
         width: 100%;
         height: 100%;
@@ -204,7 +194,7 @@
 
     // .header__bottom-list
 
-    &__bottom-list {
+    &__list {
         display: flex;
         list-style: none;
         margin: 0;
@@ -213,16 +203,16 @@
 
     // .header__bottom-list-item
 
-    &__bottom-list-item {
+    &__list-item {
 
-        & + .header__bottom-list-item {
+        & + .header__list-item {
             margin-left: 30px;
         }
     }
 
     // .header__bottom-list-link
 
-    &__bottom-list-link {
+    &__list-link {
         font-weight: 500;
         font-size: 15px;
         text-transform: uppercase;
@@ -514,6 +504,7 @@
 // Start Info
 
 .about-info {
+    background-color: #fff;
 
     // .product-info__inner
 
@@ -531,34 +522,14 @@
         width: 100%;
         text-align: center;
         transition: all .5s;
+        padding-top: 41px;
+        padding-bottom: 50px;
 
         &:hover {
             background-color: rgb(255, 255, 255);
             box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.08);
         }
     }
-
-    // .product-info__inner-item-1
-
-	&__item-1 {
-        padding-top: 46px;
-        padding-bottom: 42px;
-	}
-
-    // .product-info__inner-item-center
-
-	&__item-center {
-        padding-top: 42px;
-        padding-bottom: 42px;
-        border-radius: 4px;   
-    }    
-    
-    // .product-info__inner-item-3
-
-	&__item-3 {
-        padding-top: 46px;
-        padding-bottom: 42px;
-	}
 
     // .product-info__inner-block
 
@@ -640,6 +611,16 @@
     &__block {
         margin-bottom: 52px;
     }
+
+    // .featured-product__block-btn
+
+	&__block-btn {
+        max-width: 110px;
+        width: 100%;
+        min-height: 44px; 
+        border-radius: 30px;
+        background-color: rgb(115, 71, 193);
+	}
 
     // .big-slider__inner-slide
 
@@ -806,6 +787,11 @@
 
 	&__link {
         margin-bottom: 41px;
+        max-width: 480px;
+        width: 100%;
+        max-height: 52px; 
+        overflow-x: auto;  
+        display: flex;
 	}
 
 	// .big-slider__inner-box-link-item
@@ -819,10 +805,12 @@
         color: #868c96;
         text-decoration: none;
         transition: all .4s;
-        display: inline-block;
         outline: transparent;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
-        & + .big-slider__inner-box-link-item {
+        & + .featured-product__link-item {
             margin-left: 7px;
         }
 
@@ -851,21 +839,20 @@
         display: flex;
         align-items: center;
         padding-left: 2px;
+        position: relative;
     }
 
     // .big-slider__inner-box-rating-price
 
     &__rating-price {
-        text-decoration: none;
         font-weight: 500;
         font-size: 15px;
         color: #fff;
         background-color: $blue;
-        padding: 8px 19px;
+        padding: 8px 17px;
         border-radius: 20px;
         margin-right: 20px;
         transition: all .4s;
-        outline: transparent;
 
         &:hover {
             color: $blue;
@@ -894,6 +881,10 @@
         font-weight: 400;
         text-decoration: none;
         margin-right: 19px;
+        background-color: transparent;
+        border: none;
+        display: flex;
+        cursor: pointer;
     }
 
     // .big-slider__inner-like
@@ -910,7 +901,10 @@
         font-size: 15px;
         color: $blue;
         text-decoration: none;
-        margin-right: 170px;
+        background-color: transparent;
+        border: none;
+        display: flex;
+        cursor: pointer;
     }
 
     // .big-slider__inner-basket
@@ -918,6 +912,14 @@
 	&__rating-basket {
         margin-right: 4px;
     }
+
+    // .featured-product__rating-star
+
+	&__rating-star {
+        position: absolute;
+        right: 0;
+        top: 32px;
+	}
 }
 
 .big-slide__slick-arrow {
@@ -1056,7 +1058,8 @@
 
     &__menu {
         width: 100%;
-        min-height: 92px;
+        height: 92px;
+        overflow-x: auto;
         border-radius: 4px;
         background-color: rgb(255, 255, 255);
         box-shadow: 0px 1px 2px 0px rgba(90, 93, 100, 0.1);
@@ -1118,7 +1121,7 @@
         max-width: 361px;
         width: 100%;
         // min-height: 529px;
-        padding-bottom: 21px;
+        padding-bottom: 15px;
         border-radius: 4px;
         background-color: rgb(255, 255, 255);
         box-shadow: 0px 2px 4px 0px rgba(108, 111, 115, 0.1);
@@ -1174,7 +1177,7 @@
         border-top-left-radius: 4px;
         background-color: #000;
         background: linear-gradient( 180deg, rgb(6,116,236) 0%, rgb(61,94,215) 46%, rgb(115,71,193) 100%);
-        opacity: 0.902;
+        // opacity: 0.902;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -1330,6 +1333,7 @@
         padding-top: 22px;
         border-top: 1px solid #ececec;
         padding-left: 30px;
+        position: relative;
     }
 
     // .category__wrapper-block-price
@@ -1343,6 +1347,7 @@
         border-radius: 25px;
         text-decoration: none;
         margin-right: 8px;
+        display: inline-block;
     }
     
     // .category__wrapper-block-like
@@ -1352,7 +1357,9 @@
         font-size: 15px;
         color: #000;
         text-decoration: none;
-        margin-right: 135px;
+        border: none;
+        background-color: transparent;
+        cursor: pointer;
     }
 
     // .category-product__like-icon
@@ -1366,12 +1373,6 @@
 
 	&__sell-star {
         margin-right: 15px;
-    }
-    
-    // .category__wrapper-rating-star
-    
-    &__sell-rating {
-        margin-right: 52px;
     }
     
     // .category__wrapper-like
@@ -1391,8 +1392,14 @@
     // .category__wrapper-block-basket
 
     &__sell-basket {
+        position: absolute;
+        top: 27px;
+        right: 25px;
         color: $blue;
         text-decoration: none;
+        border: none;
+        background-color: transparent;
+        cursor: pointer;
     }
     // .category__wrapper-basket
 
@@ -1423,7 +1430,3 @@
         }
     }
 } 
-
-
-
-  
