added full homepage

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -12,3 +12,13 @@
 @import './blocks/about-info';
 @import './blocks/featured-product';
 @import './blocks/category-product';
+@import './blocks/slider-product';
+@import './blocks/about-rating';
+@import './blocks/about-martplace';
+@import './blocks/product-shopping';
+@import './blocks/about-clients';
+@import './blocks/about-news';
+@import './blocks/about-services';
+@import './blocks/join-today';
+@import './blocks/footer';
+
